# backup

./: .env.example  .gitignore  auth_setup.py  diag_drive.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/routes/: upload.py
app/services/: google_drive.py  notifications.py  telegram_bot.py
app/utils/: file_handler.py
credentials/: .gitignore
